# fpr-tools

./: Cargo.toml  LICENSE  README.md
.devcontainer/: devcontainer.json
.github/workflows/: ci.yml  release.yml
src/: audit_reader.rs  filter_template.rs  filter_template_reader.rs  fpr_report.rs  fvdl_reader.rs  lib.rs  list_filter.rs  main.rs  render.rs  section_index.rs  src_archive.rs  src_archive_reader.rs  xml_macros.rs
src/render/: info.rs  list.rs  mod.rs  show.rs  statistics.rs
