[package]
name = "fpr-tools"
version = "0.2.0"
edition = "2024"
rust-version = "1.94"
description = "CLI tool for inspecting Fortify FPR security scan reports"
authors = ["Dimm1F"]
repository = "https://github.com/dimm1f/fpr-tools"
license = "MIT"
keywords = ["fortify", "sast", "security", "fpr"]
categories = ["command-line-utilities", "development-tools"]

[dependencies]
anyhow = "1.0.102"
clap = { version = "4.6.1", features = ["derive"] }
quick-xml = { version = "0.40.1", features = ["serialize"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"
zip = "8.6.0"

[profile.release]
lto = true
strip = true
codegen-units = 1
opt-level = 3
panic = "abort"
